--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@types/react-dom": "^18.3.6",
     "copyfiles": "^2.4.1",
     "nodemon": "^3.1.7",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.3"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@lexical/react": "^0.30.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^1.14.0",
     "react-bootstrap-icons": "^1.11.5"
   }
 }
