--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react-dom": "^18.3.6",
     "copyfiles": "^2.4.1",
     "nodemon": "^3.1.7",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.0 || ^4.1.0",
     "typescript": "^5.3.3"
   },
   "author": "",
